js and css implemented via wro4j

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,6 +20,7 @@ This is a collection of various things we tried and did, all rolled into one pro
     <li>Using a form at the /personform , in PersonController</li>
     <li>A file upload under , why not /upload in FileUploadController</li>
     <li>A bunch of test that hardly cover what we did</li>
+    <li>We worked on tuturial 2 about security and Angular, find it under <a href="/tut2.html">/tut2.html</a> </li>
 </ul>
 
 <h2>Todos</h2>
